--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,7 @@
 <activity android:screenOrientation="portrait" android:name="pfc.Activitats.Puzzle"></activity>
 <activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
+<activity android:name="pfc.Activitats.SimpleAssociation"></activity>
 </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
