--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,17 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="2.2" package="pfc.Jclic">
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
+    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:label="@string/app_name" android:screenOrientation="portrait" android:name="pfc.Jclic.Jclic">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="portrait"></activity>
+    <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="landscape"></activity>
 
 <!-- Cambiar todo a landscape -->
-<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="portrait"></activity>
+<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="landscape"></activity>
 <activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
 <activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
 <activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
