--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -10,15 +10,15 @@
             </intent-filter>
         </activity>
     <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="portrait"></activity>
-
-<!-- Cambiar todo a landscape -->
-<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
-<activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
-<activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Activitats.SimpleAssociation" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
+	<!-- Cambiar todo a landscape -->
+	<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="portrait"></activity>
+	<activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
+	<activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
+	<activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
+	<activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
+	<activity android:name="pfc.Activitats.SimpleAssociation" android:screenOrientation="landscape"></activity>
+	<activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
+	<activity android:name="pfc.Activitats.WrittenAnswer" android:screenOrientation="portrait"></activity>
 </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
