Exchange+Double+Menu

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,7 +23,7 @@
 <activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Activitats.PanelsIdentify" android:screenOrientation="landscape"></activity>
 <activity android:name="pfc.Activitats.ComplexAssociation"></activity>
-<activity android:name="pfc.Activitats.WrittenAnswer"></activity>s
+<activity android:name="pfc.Activitats.WrittenAnswer"></activity>
 </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
