--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       android:versionCode="1"
       android:versionName="2.2" package="pfc.Jclic">
     <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:label="@string/app_name" android:screenOrientation="portrait" android:name="pfc.Jclic.Jclic">
+        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Inici">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -12,6 +12,9 @@
     <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="portrait"></activity>
 
 <!-- Cambiar todo a landscape -->
+<activity android:name="pfc.Jclic.Jclic" android:screenOrientation="portrait"></activity>
+<activity android:name="pfc.Jclic.DataBaseSQLite" android:screenOrientation="portrait"></activity>
+<activity android:name="pfc.Jclic.FuncionsBD" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
 <activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
@@ -19,6 +22,7 @@
 <activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Activitats.SimpleAssociation" android:screenOrientation="landscape"></activity>
 <activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
+
 </application>
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
