--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="2.2" package="pfc.Jclic">
-  <!-- Nuevo menú no tocar!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Inici">-->
+  <!-- Nuevo menú no tocar!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+  <!--   <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
+        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Inici"> -->
 
-  <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity android:label="@string/app_name" android:screenOrientation="portrait" android:name="pfc.Jclic.Jclic"> 
 
             <intent-filter>
@@ -19,7 +19,7 @@
 
 
 <!-- Cambiar todo a landscape -->
- <!--  <activity android:name="pfc.Jclic.Jclic" android:screenOrientation="portrait"></activity>-->
+<!--  <activity android:name="pfc.Jclic.Jclic" android:screenOrientation="portrait"></activity>-->
 <!-- <activity android:name="pfc.Jclic.DataBaseSQLite" android:screenOrientation="portrait"></activity>
 <activity android:name="pfc.Jclic.FuncionsBD" android:screenOrientation="portrait"></activity>-->
 <activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="landscape"></activity>
