--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,29 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="2.2" package="pfc.Jclic">
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua">
-        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Jclic">
+    package="pfc.Jclic"
+    android:versionCode="1"
+    android:versionName="2.2" >
+
+    <application
+        android:debuggable="true"
+        android:icon="@drawable/jclic_aqua"
+        android:label="@string/app_name" >
+        <activity
+            android:name="pfc.Jclic.Jclic"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="portrait"></activity>
-
-    
-<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="landscape"></activity>
-<activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
-<activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.Text" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.Identify" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="landscape"></activity>
+        <activity
+            android:name="pfc.Activitats.ExchangePuzzle"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.DoublePuzzle"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.HolePuzzle"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.Puzzle"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.NavegadorArxius.NavegadorArxius"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.Text"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.Identify"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Repositori.LlistatProjectes"
+            android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.TextOrder"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="pfc.Activitats.FillinBlanks"
+            android:screenOrientation="landscape" >
+        </activity>
 </application>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-<uses-sdk android:targetSdkVersion="8" android:minSdkVersion="3" />
+    <uses-sdk
+        android:minSdkVersion="3"
+        android:targetSdkVersion="8" />
 
-</manifest> 
+</manifest>
