--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,42 +2,43 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
       android:versionName="2.2" package="pfc.Jclic">
-  <!-- Nuevo menú no tocar!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
-  <!--    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
-        <activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Inici"> -->
+	<uses-sdk android:minSdkVersion="8" 
+          android:targetSdkVersion="8" />
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  
+	<!-- Nuevo menú no tocar!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!-->
+	<application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar">
+    	<activity android:label="@string/app_name" android:screenOrientation="landscape" android:name="pfc.Jclic.Inici">
 
-    <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        <activity android:label="@string/app_name" android:screenOrientation="portrait" android:name="pfc.Jclic.Jclic"> 
+    <!-- <application android:label="@string/app_name" android:debuggable="true" android:icon="@drawable/jclic_aqua" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity android:label="@string/app_name" android:screenOrientation="portrait" android:name="pfc.Jclic.Jclic"> --> 
 
-            <intent-filter>
+        	<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-    <activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="landscape"></activity>
+    	<activity android:name="pfc.Activitats.ExchangePuzzle" android:screenOrientation="landscape"></activity>
 
 
-<!-- Cambiar todo a landscape -->
-<!--   <activity android:name="pfc.Jclic.Jclic" android:screenOrientation="portrait"></activity>-->
-<!-- <activity android:name="pfc.Jclic.DataBaseSQLite" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Jclic.FuncionsBD" android:screenOrientation="portrait"></activity>-->
-<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
-<activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
-<activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Activitats.SimpleAssociation" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
-<activity android:name="pfc.Activitats.PanelsIdentify" android:screenOrientation="landscape"></activity>
-<activity android:name="pfc.Activitats.ComplexAssociation"></activity>
-<activity android:name="pfc.Activitats.WrittenAnswer"></activity>
+		<!-- Cambiar todo a landscape -->
+		<activity android:name="pfc.Jclic.Jclic" android:screenOrientation="portrait"></activity>
+		<!-- <activity android:name="pfc.Jclic.DataBaseSQLite" android:screenOrientation="portrait"></activity>
+		<activity android:name="pfc.Jclic.FuncionsBD" android:screenOrientation="portrait"></activity>-->
+		<activity android:name="pfc.Jclic.Llibreria" android:screenOrientation="landscape"></activity>
+		<activity android:name="pfc.Activitats.DoublePuzzle" android:screenOrientation="landscape"></activity>
+		<activity android:name="pfc.Activitats.HolePuzzle" android:screenOrientation="portrait"></activity>
+		<activity android:screenOrientation="landscape" android:name="pfc.Activitats.Puzzle"></activity>
+		<activity android:name="pfc.NavegadorArxius.NavegadorArxius" android:screenOrientation="portrait"></activity>
+		<activity android:name="pfc.Repositori.LlistatProjectes" android:screenOrientation="portrait"></activity>
+		<activity android:name="pfc.Activitats.SimpleAssociation" android:screenOrientation="landscape"></activity>
+		<activity android:name="pfc.Activitats.Memory" android:screenOrientation="portrait"></activity>
+		<activity android:name="pfc.Activitats.PanelsIdentify" android:screenOrientation="landscape"></activity>
+		<activity android:name="pfc.Activitats.ComplexAssociation"></activity>
+		<activity android:name="pfc.Activitats.WrittenAnswer"></activity>
 
-</application>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
-
-
+	</application>
 
 </manifest> 
